force-app/main/default/objects/maps__TerritoryNode__c/maps__TerritoryNode__c.object-meta.xml
<CustomObject>
    <label>Territory Node</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>