force-app/main/default/objects/maps__TerritoryNode__c/fields/maps__Order__c.field-meta.xml
<CustomField>
    <fullName>maps__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>