force-app/main/default/objects/maps__TerritoryNode__c/fields/maps__ShapeLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__ShapeLayer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Shape Layer</label>
    <referenceTo>maps__ShapeLayer__c</referenceTo>
    <relationshipLabel>Territory Nodes</relationshipLabel>
    <relationshipName>TerritoryNodes</relationshipName>
    <type>Lookup</type>
</CustomField>