force-app/main/default/objects/maps__TerritoryNode__c/fields/maps__TerritoryLayer__c.field-meta.xml
<CustomField>
    <fullName>maps__TerritoryLayer__c</fullName>
    <label>Maps Territory Layer</label>
    <referenceTo>maps__Layer__c</referenceTo>
    <relationshipLabel>Maps Territory Nodes</relationshipLabel>
    <relationshipName>TerritoryNodes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>