force-app/main/default/objects/maps__TerritoryNode__c/fields/maps__TerritoryNode__c.field-meta.xml
<CustomField>
    <fullName>maps__TerritoryNode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maps Territory Node</label>
    <referenceTo>maps__TerritoryNode__c</referenceTo>
    <relationshipLabel>Maps Territory Nodes</relationshipLabel>
    <relationshipName>TerritoryNodes</relationshipName>
    <type>Lookup</type>
</CustomField>